# gameengine

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  UPGRADE_SUMMARY.md  build.bat  build_check.bat  build_manual.bat  build_simple.bat  debug_test.cpp  dxdiag_output.txt  setup_python.py  test_engine.cpp
.github/: copilot-instructions.md
assets/: config.ini
examples/: CMakeLists.txt  basic_demo.py
examples/basic_demo/: CMakeLists.txt  main.cpp
examples/c/: simple_game.c
examples/lua/: simple_game.lua
examples/python/: platformer_game.py
include/: AISystem.h  AISystem_backup.h  AISystem_temp.h  AdvancedAnimationSystem.h  AdvancedAudioEngine.h  AdvancedPhysicsEngine.h  AnimationSystem.h  AudioDevice.h  AudioSystem.h  Camera.h  Engine.h  EngineConfig.h.in  EngineErrorRecovery.h  EngineUI.h  GameImporter.h  GameImporterUI.h  GameModuleAPI.h  GraphicsDevice.h  GraphicsDevice_backup.h  InputManager.h  Light.h  LightingEngine.h  Logger.h  LuaEngine.h  LuaScriptingEngine.h  Mesh.h  MotionControlSystem.h  NextGenAudioEngine.h  NexusC.h  ParticleSystem.h  PhysXEngine.h  PhysicsEngine.h  PhysicsEngine_backup.h  Platform.h  RayTracingEngine.h  ResourceManager.h  ScriptManager.h  ScriptingEngine.h  Shader.h  TextRenderer.h  (+6 more)
lua/: CMakeLists.txt  example_game.lua  nexus_api.lua
python/: CMakeLists.txt
python/bindings/: EngineBindings.cpp  GraphicsBindings.cpp  MathBindings.cpp  ai_bindings.cpp  animation_bindings.cpp  audio_bindings.cpp  engine_bindings.cpp  graphics_bindings.cpp  input_bindings.cpp  lighting_bindings.cpp  motion_bindings.cpp  particle_bindings.cpp  physics_bindings.cpp  platform_bindings.cpp  resource_bindings.cpp  scripting_bindings.cpp  utils_bindings.cpp
shaders/: Basic_PS.hlsl  Basic_VS.hlsl  Bloom_PS.hlsl  HeatHaze_PS.hlsl  NormalMap_PS.hlsl  NormalMap_VS.hlsl  PBR_PS.hlsl  PBR_VS.hlsl  SSAO_PS.hlsl  ShadowMap_PS.hlsl  ShadowMap_VS.hlsl
src/: CMakeLists.txt  main.cpp  main_debug.cpp  main_simple.cpp  texture_test.cpp
src/ai/: AISystem.cpp
src/api/: NexusC.cpp
src/audio/: AudioDevice.cpp  AudioSystem.cpp  AudioSystem_fixed.cpp
src/core/: Engine.cpp  EngineErrorRecovery.cpp
src/graphics/: AnimationSystem.cpp  Camera.cpp  GraphicsDevice.cpp  GraphicsDevice_backup.cpp  GraphicsDevice_stub.cpp  Light.cpp  LightingEngine.cpp  LightingEngine_dx11.cpp  LightingEngine_dx9_backup.cpp  Mesh.cpp  ParticleSystem.cpp  Shader.cpp  TextRenderer.cpp  Texture.cpp  UnrealAssetLoader.cpp  UnrealTextureLoader.cpp
src/input/: InputManager.cpp
src/motion/: MotionControlSystem.cpp
src/physics/: PhysicsEngine.cpp  PhysicsEngine_backup.cpp  PhysicsEngine_clean.cpp
src/platform/: Platform.cpp
src/scripting/: LuaScriptingEngine.cpp  ScriptManager.cpp  ScriptingEngine.cpp
src/tools/: asset_converter.cpp  godot_importer.cpp  unity_importer.cpp  unreal_importer.cpp
src/ui/: EngineUI.cpp  GameImporterUI.cpp  UISystem.cpp
src/utils/: GameImporter.cpp  Logger.cpp  ResourceManager.cpp  Timer.cpp
